--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "json-server": "^0.11.2",
     "nprogress": "^0.2.0",
     "react": "^15.6.1",
